--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
   <link rel="stylesheet" type="text/css" rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="">
+  <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
-
-
   <title>Train Schedule</title>
 </head>
 
@@ -22,7 +20,6 @@
     <p>ChooChoo</p>
     <p id="time"></p>
   </div>
-
   <div class="panel panel-primary">
     <div class="panel-heading">Train Schedule</div>
     <table class="table">
@@ -39,7 +36,6 @@
       </tbody>
     </table>
   </div>
-
   <div class="panel panel-primary">
     <div class="panel-heading">Add Train</div>
     <div class="panel-body">
@@ -47,33 +43,34 @@
         <label for="trainNameInput"> Train Name </label>
         <input type="text" class="form-control" id="trainNameInput" placeholder="Enter Train Name Here" />
       </div>
-
       <div class="form-group">
         <label for="destinationInput">Destination</label>
         <input type="text" class="form-control" id="destinationInput" placeholder="Where To" />
       </div>
-
       <div class="form-group">
         <label for="firstTrainTimeInput"> First Train Time (HH:mm - Military Time)</label> <br>
         <input type="time" class="form-control" id="firstTrainTimeInput" placeholder="00:00" />
       </div>
-
       <div class="form-group">
         <label for="frequencyInput">Frequency</label>
         <input type="number" class="form-control" id="frequencyInput" placeholder="Enter Value Of Minutes (Not 0)" />
       </div>
-
       <button type="submit" class="btn btn-primary" id="submitButton">Submit</button>
-
     </div>
   </div>
   <script src="https://www.gstatic.com/firebasejs/6.4.2/firebase-app.js"></script>
-  <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script src="./assets/trainschedule.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
 
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <script src="./assets/trainschedule.js"></script>
 </body>
 
 </html>
